syntax = "proto3";
package event_store.client.feature_discovery;
option java_package = "com.eventstore.dbclient.proto.featurediscovery";
import "shared.proto";

service FeatureDiscovery {
	rpc GetSupportedMethods (event_store.client.Empty) returns (SupportedMethods);
}

message SupportedMethods {
	repeated SupportedMethod Methods = 1;
	string ApiVersion = 2;
}

message SupportedMethod {
	string MethodName = 1;
	string ServiceName = 2;
}

